Сверстал страницу формы

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
   </header>
 
   <main class="page-main">
-    <h1>Функциональное питание для котов</h1>
+    <h1 class="page-title">Функциональное питание для котов</h1>
     <section class="program">
       <div class="program-wrapper">
         <header class="program__header">
@@ -146,13 +146,16 @@
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы во Вконтакте</span></a>
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span
+                class="visually-hidden">Мы во Вконтакте</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span></a>
-          </li>          
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span
+                class="visually-hidden">Мы в Фейсбуке</span></a>
+          </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span></a>
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span
+                class="visually-hidden">Мы в Инстаграме</span></a>
           </li>
         </ul>
       </section>
@@ -160,7 +163,7 @@
         <h2 class="visually-hidden">Копирайт</h2>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </section>
-      
+
     </div>
 
   </footer>
