Сверстал страницу каталога

--- a/source/form.html
+++ b/source/form.html
@@ -64,10 +64,10 @@
           <label for="owner-phone">Телефон:*</label>
           <input type="tel" name="phone" id="owner-phone" value="8 (960) 900-60-90" required>
         </fieldset>
-        <fieldset class="comment">
+        <fieldset class="form__comment">
           <textarea name="comment" id="owner-comment" cols="40" rows="10">РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА</textarea>
         </fieldset>
-        <fieldset class="additive">
+        <fieldset class="form__additive">
           <input type="checkbox" name="sugar" id="add-sugar">
           <label for="add-sugar">Сахарозаменитель</label>
           <input type="checkbox" name="water" id="add-water">
