--- a/source/catalog.html
+++ b/source/catalog.html
@@ -137,28 +137,28 @@
           <dl class="additional-products__list"></dl>
           <dt>1 упаковка (100 г)</dt>
           <dd>200 Р.</dd>
-          <a class="additional-products__link additional-products--buy" href="#"></a>
+          <a class="additional-products__link additional-products--buy" href="#">Заказать</a>
         </li>
         <li class="additional-products__item">
           <p class="additional-products__description">Питьевая вода</p>
           <dl class="additional-products__list"></dl>
           <dt>5 литров</dt>
           <dd>50 Р.</dd>
-          <a class="additional-products__link additional-products--buy" href="#"></a>
+          <a class="additional-products__link additional-products--buy" href="#">Заказать</a>
         </li>
         <li class="additional-products__item">
           <p class="additional-products__description">Молоко</p>
           <dl class="additional-products__list"></dl>
           <dt>1 литр</dt>
           <dd>100 Р.</dd>
-          <a class="additional-products__link additional-products--buy" href="#"></a>
+          <a class="additional-products__link additional-products--buy" href="#">Заказать</a>
         </li>
         <li class="additional-products__item">
           <p class="additional-products__description">Витамины</p>
           <dl class="additional-products__list"></dl>
           <dt>1 упаковка (30 г)</dt>
           <dd>300 Р.</dd>
-          <a class="additional-products__link additional-products--buy" href="#"></a>
+          <a class="additional-products__link additional-products--buy" href="#">Заказать</a>
         </li>
       </ul>
       <div class="additional-products__present">
