--- a/source/catalog.html
+++ b/source/catalog.html
@@ -182,15 +182,21 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span
-                class="visually-hidden">Мы во Вконтакте</span></a>
+                class="visually-hidden">Мы во Вконтакте</span>
+              <img src="img/icon_vkontakte.svg" alt="Вконтакте">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span
-                class="visually-hidden">Мы в Фейсбуке</span></a>
+                class="visually-hidden">Мы в Фейсбуке</span>
+              <img src="img/icon_facebook.svg" alt="Фейсбук">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span
-                class="visually-hidden">Мы в Инстаграме</span></a>
+                class="visually-hidden">Мы в Инстаграме</span>
+              <img src="img/icon_instagram.svg" alt="Инстаграм">
+            </a>
           </li>
         </ul>
       </section>
