--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,36 +8,39 @@
 
 <body>
   <header class="page-header">
-    <a class="page-header__logo logo" href="#">
-      <img src="img/logo-mobile.svg" width="124" height="64" alt="Логотип">
-      <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="#">
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="page-header__wrapper">
+      <a class="page-header__logo logo" href="#">
+        <img src="img/logo-mobile.svg" width="124" height="64" alt="Логотип">
+        <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+      </a>
+      <nav class="page-header__main-nav main-nav">
+        <div class="main-nav__wrapper">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="#">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <main class="page-main">
-    <h1 class="page-title">Каталог продукции</h1>
-    <section class="basic-products">
+    <h1 class="page-main__title">Каталог продукции</h1>
+    <section class="page-main__basic-products basic-products">
+      <div class="basic-products__wrapper">
       <h2 class="visually-hidden">Основные товары</h2>
       <ul class="basic-products__items">
         <li class="basic-products__item">
@@ -172,8 +175,10 @@
           <a class="basic-products__link basic-products--add" href="#">Показать все</a>
         </li>
       </ul>
+    </div>
     </section>
-    <section class="additional-products">
+    <section class="page-main__additional-products additional-products">
+      <div class="additional-products__wrapper">
       <h2 class="additional-products__title">Дополнительные товары</h2>
       <ul class="additional-products__items">
         <li class="additional-products__item">
@@ -217,19 +222,22 @@
           <a class="additional-products__link additional-products__link--buy" href="#">Заказать</a>
         </li>
       </ul>
+    </div>
     </section>
-    <section>
-      <div class="present">
+    <section class="page-main__present present">
+      <div class="present__wrapper">
         <img class="additional-products__image" src="img/icon-gift.svg" width="78" height="80" alt="подарок">
         <p class="additional-products__text">Закажите все и получите чехол для кота в подарок!</p>
       </div>
     </section>
-    <section class="main__contacts contacts">
-      <h2 class="visually-hidden">Наш адрес</h2>
-      <p class="contacts__invite">Приглашаем к сотрудничеству дилеров!</p>
-      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      <div class="contacts__map"></div>
-      <div class="contacts__marker"></div>
+    <section class="page-main__contacts contacts">
+      <div class="contacts__wrapper">
+        <h2 class="visually-hidden">Наш адрес</h2>
+        <p class="contacts__invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <address class="contacts__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</address>
+        <div class="contacts__map"></div>
+        <div class="contacts__marker"></div>
+      </div>
     </section>
   </main>
 
@@ -261,6 +269,7 @@
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
+
 
 </body>
 
