--- a/source/form.html
+++ b/source/form.html
@@ -8,39 +8,42 @@
 
 <body class="page-body">
   <header class="page-header">
-    <a class="page-header__logo logo" href="#">
-      <img src="img/logo-mobile.svg" width="124" height="64" alt="Логотип">
-      <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="#">
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="page-header__wrapper">
+      <a class="page-header__logo logo" href="#">
+        <img src="img/logo-mobile.svg" width="124" height="64" alt="Логотип">
+        <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+      </a>
+      <nav class="page-header__main-nav main-nav">
+        <div class="main-nav__wrapper">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="#">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <main class="page-main">
-    <h1 class="page-title">Подбор программы</h1>
-    <p class="text">
-      Заполните анкету, и мы подберем<br>программу питания для вашего кота
-    </p>
-    <section class="form">
+    <h1 class="page-main__title title-main">Подбор программы</h1>
+
+    <section class="page-main__form form">
+      <h2 class="form__title">
+        Заполните анкету, и мы подберем<br>программу питания для вашего кота
+      </h2>
       <form action="#" method="POST">
         <fieldset class="form__data">
           <label for="animal-name">Имя:*</label>
@@ -82,12 +85,14 @@
         <p class="form__note">* &mdash; Обязательные поля</p>
       </form>
     </section>
-    <section class="main__contacts contacts">
-      <h2 class="visually-hidden">Наш адрес</h2>
-      <p class="contacts__invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-      <p class="contacts__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</p>
-      <div class="contacts__map"></div>
-      <div class="contacts__marker"></div>
+    <section class="page-main__contacts contacts">
+      <div class="contacts__wrapper">
+        <h2 class="visually-hidden">Наш адрес</h2>
+        <p class="contacts__invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <address class="contacts__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</address>
+        <div class="contacts__map"></div>
+        <div class="contacts__marker"></div>
+      </div>
     </section>
   </main>
   <footer class="page-footer">
