--- a/source/index.html
+++ b/source/index.html
@@ -9,64 +9,69 @@
 
 <body class="page-body">
   <header class="page-header">
-    <a class="page-header__logo logo" href="#">
-      <img src="img/logo-mobile.svg" width="124" height="64" alt="Логотип">
-      <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
-    </a>
-    <nav class="main-nav">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo logo" href="#">
+        <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
+        <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+      </a>
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="#">
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+      <nav class="page-header__main-nav main-nav">
+        <div class="main-nav__wrapper">
+
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="#">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main class="page-main">
-    <h1 class="page-title">Функциональное питание для котов</h1>
-    <section class="main__program program">
-      <div class="program-wrapper">
-        <header class="program__header">
-          <h2 class="visually-hidden">Выбор программы</h2>
-          <p class="program__slogan">Занялся собой? Займись котом!</p>
-          <a class="program__link" href="form.html">Подобрать программу</a>
-        </header>
+    <h1 class="page-main__title title-main">Функциональное питание для котов</h1>
+    <section class="page-main__promo promo">
+      <div class="promo__wrapper">
+        <h2 class="visually-hidden">Выбор программы</h2>
+        <p class="promo__slogan">Занялся собой? Займись котом!</p>
+        <a class="promo__link" href="form.html">Подобрать программу</a>
+      </div>
+    </section>
+    <section class="page-main__program program">
+      <div class="program__wrapper">
         <ul class="program__list">
           <li class="program__item">
-            <h3 class="program__item__title program__item__title--slim">Похудение</h3>
-            <p class="program__item__description">Ваш кот весит больше собаки и<br>
+            <h3 class="program__title program__title--slim">Похудение</h3>
+            <p class="program__description">Ваш кот весит больше собаки и<br>
               почти утратил способность лазить<br>по деревьям? Пора на диету! Cat<br>
               Energy Slim поможет вашему<br>питомцу сбросить лишний вес.
             </p>
-            <a class="program__item__link" href="catalog.html">Каталог Slim</a>
+            <a class="program__link" href="catalog.html">Каталог Slim</a>
           </li>
           <li class="program__item">
-            <h3 class="program__item__title program__item__title--pro">Набор массы</h3>
-            <p class="program__item__description">Заработать авторитет среди<br>
+            <h3 class="program__title program__title--pro">Набор массы</h3>
+            <p class="program__description">Заработать авторитет среди<br>
               дворовых котов и даже собак?<br>Серия Cat Energy Pro поможет<br>вашему коту нарастить<br>
               необходимые мышцы.
             </p>
-            <a class="program__item__link" href="catalog.html">Каталог Pro</a>
+            <a class="program__link" href="catalog.html">Каталог Pro</a>
           </li>
         </ul>
       </div>
     </section>
-    <section class="main__features features">
+    <section class="page-main__features features">
       <div class="features__wrapper">
         <header class="features__header">
           <h2 class="visually-hidden">Особенности программы</h2>
@@ -96,27 +101,27 @@
         </ul>
       </div>
     </section>
-    <section class="main__example example">
+    <section class="page-main__example example">
       <div class="example__wrapper">
         <header class="example__header">
           <h2 class="visually-hidden">Результат программы</h2>
           <p class="example__slogan">Живой пример</p>
         </header>
-        <p class="example-description">Борис сбросил 5 кг за 2 месяца, просто<br>
+        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто<br>
           заменив свой обычный корм на Cat<br>Energy Slim. Отличный результат без<br>
           изнуряющих тренировок! При этом он не<br>менял своих привычек и по-прежнему<br>
           спит по 16 часов в день.
         </p>
-        <dl class="example__list">
-          <div class="example__item">
-            <dt class="example__item__value">5 кг</dt>
-            <dd class="example__item__description">Снижение веса</dd>
-          </div>
-          <div>
-            <dt class="example__item__value">60 дней</dt>
-            <dd class="example__item__description">Затрачено времени</dd>
-          </div>
-        </dl>
+        <ul class="example__list">
+          <li class="example__item">
+            <p class="example__value">5 кг</dt>
+            <p class="example__description">Снижение веса</dd>
+          </li>
+          <li>
+            <p class="example__value">60 дней</p>
+            <p class="example__description">Затрачено времени</p>
+          </li>
+        </ul>
         <p class="example__price">Затраты на питание: 15 000 руб.</p>
         <div class="example__slider">
           <ul class="example__slider-list">
@@ -133,12 +138,14 @@
         </div>
       </div>
     </section>
-    <section class="main__contacts contacts">
-      <h2 class="visually-hidden">Наш адрес</h2>
-      <p class="contacts__invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-      <p class="contacts__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</p>
-      <div class="contacts__map"></div>
-      <div class="contacts__marker"></div>
+    <section class="page-main__contacts contacts">
+      <div class="contacts__wrapper">
+        <h2 class="visually-hidden">Наш адрес</h2>
+        <p class="contacts__invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <address class="contacts__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</address>
+        <div class="contacts__map"></div>
+        <div class="contacts__marker"></div>
+      </div>
     </section>
   </main>
 
