Сверстал главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
         <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
         <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
       </a>
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </div>
     <nav class="page-header__main-nav main-nav">
       <div class="main-nav__wrapper">
@@ -42,7 +42,7 @@
   <main class="page-main">
     <section class="page-main__promo promo">
       <div class="promo__wrapper">
-        <h1 class="page-main__title title-main">Функциональное питание для котов</h1>
+        <h1 class="page-main__title page-main__title--style">Функциональное питание для котов</h1>
         <h2 class="visually-hidden">Выбор программы</h2>
         <p class="promo__slogan promo__slogan--style">Занялся собой? Займись котом!</p>
       </div>
@@ -141,40 +141,45 @@
     <section class="page-main__contacts contacts">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Наш адрес</h2>
-        <p class="contacts__invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-        <address class="contacts__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</address>
-        <div class="contacts__map"></div>
-        <div class="contacts__marker"></div>
+        <p class="contacts__invite contacts__invite--style">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <address class="contacts__address contacts__address--style">ул. Большая<br>Конюшенная, д.
+          19/8<br>Санкт-Петербург</address>
+      </div>
+    </section>
+    <section class="page-main__location location">
+      <div class="location__wrapper">
+        <div class="location__map location__map--style"></div>
       </div>
     </section>
   </main>
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__logo logo">
+      <a class="page-footer__logo page-footer__logo--style">
         <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
       </a>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span
-              class="visually-hidden">Мы во Вконтакте</span>
+      <ul class="page-footer__social-list page-footer__social-list--style">
+        <li class="page-footer__social-item page-footer__social-item--style">
+          <a class="page-footer__social-link page-footer__social-link--vkontakte"
+            href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы во Вконтакте</span>
             <img src="img/icon_vkontakte.svg" alt="Вконтакте">
           </a>
         </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span
-              class="visually-hidden">Мы в Фейсбуке</span>
+        <li class="page-footer__social-item page-footer__social-item--style">
+          <a class="page-footer__social-link page-footer__social-link--facebook"
+            href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span>
             <img src="img/icon_facebook.svg" alt="Фейсбук">
           </a>
         </li>
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span
-              class="visually-hidden">Мы в Инстаграме</span>
+        <li class="spage-footer__social-item page-footer__social-item--style">
+          <a class="page-footer__social-link page-footer__social-link--instagram"
+            href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span>
             <img src="img/icon_instagram.svg" alt="Инстаграм">
           </a>
         </li>
       </ul>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="page-footer__copyright page-footer__copyright--style"
+        href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
 
